# krita

./: README.org
libs/: CMakeLists.txt
libs/global/: kis_debug.cpp  kis_debug.h
libs/image/: CMakeLists.txt
libs/opencl/: CMakeLists.txt  kis_opencl_context.cpp  kis_opencl_context.h  kis_opencl_device.cpp  kis_opencl_device.h  kis_opencl_platform.cpp  kis_opencl_platform.h  kis_opencl_utils.cpp  kis_opencl_utils.h
libs/opencl/device/: composite.cl
libs/opencl/tests/: CMakeLists.txt  kis_opencl_context_test.cpp  kis_opencl_context_test.h
libs/pigment/: CMakeLists.txt
libs/pigment/compositeops/: KoOpenCLCompositeOpAlphaDarken32.h  KoOptimizedCompositeOpFactory.cpp  KoOptimizedCompositeOpFactoryPerArch.h  KoOptimizedCompositeOpFactoryPerArch_OpenCL.cpp  KoVcMultiArchBuildSupport.h
